Bug 125546 - FILEOPEN DOCX Style changes result in multiple change tracking entries
Summary: FILEOPEN DOCX Style changes result in multiple change tracking entries
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-05-28 10:57 UTC by NISZ LibreOffice Team
Modified: 2019-07-29 23:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (20.23 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-05-28 10:57 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer. (123.69 KB, image/png)
2019-05-28 10:57 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-28 10:57:09 UTC
Description:
Modifying the style of a paragraph in a change tracked docx results in a lot of entries in the Manage Changes dialog instead of one in Word.
In comparison when changing direct character formatting there is only one entry both in Word and Writer.


Steps to Reproduce:
1.	Insert text in Word
2.	Enable change tracking
3.	Modify the paragraph style. This will result in one change tracking entry.
4.	Save the file and open it in Writer
5.	Open the Mange Changes window


Actual Results:
There are lots of change tracking entries for the formatting change, one for each word of the paragraph.

Expected Results:
There should be only one entry just like in Word. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-28 10:57:41 UTC
Created attachment 151732 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-05-28 10:57:59 UTC
Created attachment 151733 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 3 Dieter 2019-06-12 07:52:15 UTC
I confirm it with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: b170256fb6ebaf774b02b89835b19d9f3a1afb89
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-07_03:30:35
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

LibreOffice: 28 changes
MS Word: 3 changes
Comment 4 Commit Notification 2019-07-19 13:33:23 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a5abe0fc4d435d3a7a7de8bf55ec74087fdd299a%5E%21

tdf#125546 DOCX import: fix overgrowth of change tracking entries

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-07-29 23:39:56 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 0d36b32755ac662299e6a8165e9fa57311b74a2f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!

Reproduced back to

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)