tdf#125546 DOCX import: fix overgrowth of change tracking entries

The same text portion could get double redlines including
ParagraphFormat. This broke redline compression, sometimes
resulting huge amount of redundant change tracking entries
based on rsId, or losing paragraph styles after deletion.

Change-Id: I5930eab2ef0bc7eb9c93a10cdd30b96cd41c9098